--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
 bcrypt==4.2.1
+beautifulsoup4==4.13.5
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.3
 click==8.1.8
 cloudinary==1.42.1
 colorama==0.4.6
@@ -29,9 +31,11 @@ pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.20
+requests==2.32.5
 rsa==4.9
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.37
 starlette==0.41.3
 typing_extensions==4.12.2
