--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,22 @@ click==8.1.8
 cloudinary==1.42.1
 colorama==0.4.6
 cryptography==44.0.0
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
+Faker==37.6.0
 fastapi==0.115.6
 greenlet==3.1.1
-h11==0.14.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+jiter==0.10.0
 Mako==1.3.8
 MarkupSafe==3.0.2
+openai==1.106.1
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -38,6 +44,8 @@ sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.37
 starlette==0.41.3
+tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 uvicorn==0.34.0
