--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ ecdsa==0.19.0
 email_validator==2.2.0
 Faker==37.6.0
 fastapi==0.115.6
-greenlet==3.1.1
+
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -53,3 +53,4 @@ python-slugify==8.0.1
 openpyxl==3.1.2
 reportlab==4.0.4
 tenacity==8.2.3
+feedparser==6.0.11
